Description
Now line "IDS_SHV_COLUMN1" in "\dll\win32\shell32\lang" is used as the marking column, and marking a file type that is not correct. You need to use different strings to indicate the column and the type of the file. It especially looks weird in the translations into other languages, because the same word is used in two different meanings.
Attachments
Issue Links
- relates to
-
CORE-11806 Incorrect column name 'Name' in Explorer
-
- Closed
-