[SHELL32] - Add a separate string for the unknown file types and rename the first column to Name from File. - Note to translators: Please update translations based on the changes in the English strings. Patch by Amber. CORE-12530

svn path=/trunk/; revision=73444